Add comprehensive cost management and Demo Mode documentation
- Add COST_MANAGEMENT.md with detailed pricing, ROI analysis, and optimization strategies
- Add DEMO_MODE_SETUP.md for zero-cost testing and demonstrations
- Update README.md with prominent cost warnings and Demo Mode info
- Update env.example with DEMO_MODE configuration and cost details
- Provide clear guidance for users concerned about API costs
- Include hybrid setup options for cost-conscious teams

--- a/env.example
+++ b/env.example
@@ -4,9 +4,20 @@ GITHUB_TOKEN=your_github_token_here
 # AI Provider: 'anthropic' or 'openai'
 AI_PROVIDER=anthropic
 
+# Demo Mode: Set to 'true' to use mock responses (FREE - no API costs!)
+# Use for testing, demos, and development without spending API credits
+# Set to 'false' or remove for production (real AI API calls)
+DEMO_MODE=false
+
 # Anthropic API Key (for Claude)
+# Required only if DEMO_MODE=false and AI_PROVIDER=anthropic
+# Get your key at: https://console.anthropic.com/
+# Cost: ~$0.01-0.05 per code fix
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# OpenAI API Key (for GPT-4)
+# OpenAI API Key (for GPT-4/GPT-3.5)
+# Required only if DEMO_MODE=false and AI_PROVIDER=openai
+# Get your key at: https://platform.openai.com/api-keys
+# Cost: ~$0.001-0.01 per code fix (GPT-3.5)
 OPENAI_API_KEY=your_openai_api_key_here
 
