Add FREE AI providers - Real AI without cost!
- Add support for Groq (14,400 free requests/day - RECOMMENDED)
- Add support for Google Gemini (1,500 free requests/day)
- Add support for Hugging Face (rate limited but free)
- Update ai-service.js with OpenAI-compatible and native API integrations
- Create comprehensive FREE_AI_SETUP.md guide
- Update README.md to prominently feature free options
- Update env.example with all provider configurations
- No mock responses - all providers use real AI models
- Zero credit card required for free tiers
- Perfect for teams wanting real AI without ongoing costs

--- a/env.example
+++ b/env.example
@@ -1,23 +1,36 @@
 # GitHub Token (automatically provided by GitHub Actions)
 GITHUB_TOKEN=your_github_token_here
 
-# AI Provider: 'anthropic' or 'openai'
-AI_PROVIDER=anthropic
+# AI Provider: Choose one
+# - 'groq' (RECOMMENDED) - FREE: 14,400 requests/day, fast Llama 3.1 70B model
+# - 'gemini' - FREE: 15 requests/minute, Google's Gemini 1.5 Flash
+# - 'huggingface' - FREE: Inference API with Llama 3 70B
+# - 'anthropic' - PAID: Claude Sonnet (~$0.03 per request)
+# - 'openai' - PAID: GPT-3.5/GPT-4 (~$0.001-0.05 per request)
+AI_PROVIDER=groq
 
-# Demo Mode: Set to 'true' to use mock responses (FREE - no API costs!)
-# Use for testing, demos, and development without spending API credits
-# Set to 'false' or remove for production (real AI API calls)
-DEMO_MODE=false
+# === FREE AI PROVIDERS (No credit card required!) ===
 
-# Anthropic API Key (for Claude)
-# Required only if DEMO_MODE=false and AI_PROVIDER=anthropic
-# Get your key at: https://console.anthropic.com/
-# Cost: ~$0.01-0.05 per code fix
+# Groq API Key (FREE - Get at: https://console.groq.com/)
+# Free tier: 14,400 requests/day, extremely fast inference
+# Best free option for most users!
+GROQ_API_KEY=gsk_your_groq_api_key_here
+
+# Google Gemini API Key (FREE - Get at: https://makersuite.google.com/app/apikey)
+# Free tier: 15 requests/minute, 1500 requests/day
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Hugging Face API Token (FREE - Get at: https://huggingface.co/settings/tokens)
+# Free tier: Rate limited but generous for personal use
+HUGGINGFACE_API_KEY=hf_your_huggingface_token_here
+
+# === PAID AI PROVIDERS (Credit card required) ===
+
+# Anthropic API Key (PAID - Get at: https://console.anthropic.com/)
+# Cost: ~$3-15 per million tokens (~$0.01-0.05 per code fix)
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# OpenAI API Key (for GPT-4/GPT-3.5)
-# Required only if DEMO_MODE=false and AI_PROVIDER=openai
-# Get your key at: https://platform.openai.com/api-keys
-# Cost: ~$0.001-0.01 per code fix (GPT-3.5)
+# OpenAI API Key (PAID - Get at: https://platform.openai.com/api-keys)
+# Cost: ~$0.50-1.50 per million tokens (~$0.001-0.01 per code fix)
 OPENAI_API_KEY=your_openai_api_key_here
 
