--- a/env.example
+++ b/env.example
@@ -1,36 +1,24 @@
 # GitHub Token (automatically provided by GitHub Actions)
 GITHUB_TOKEN=your_github_token_here
 
-# AI Provider: Choose one
-# - 'groq' (RECOMMENDED) - FREE: 14,400 requests/day, fast Llama 3.1 70B model
-# - 'gemini' - FREE: 15 requests/minute, Google's Gemini 1.5 Flash
-# - 'huggingface' - FREE: Inference API with Llama 3 70B
-# - 'anthropic' - PAID: Claude Sonnet (~$0.03 per request)
-# - 'openai' - PAID: GPT-3.5/GPT-4 (~$0.001-0.05 per request)
-AI_PROVIDER=groq
+# AI Provider: 'bedrock' (AWS Bedrock), 'anthropic', or 'openai'
+AI_PROVIDER=bedrock
 
-# === FREE AI PROVIDERS (No credit card required!) ===
+# === AWS BEDROCK (Recommended for Adobe/Enterprise users) ===
+# AWS Bedrock with Claude Sonnet 4
+AWS_REGION=us-west-2
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
 
-# Groq API Key (FREE - Get at: https://console.groq.com/)
-# Free tier: 14,400 requests/day, extremely fast inference
-# Best free option for most users!
-GROQ_API_KEY=gsk_your_groq_api_key_here
+# Bedrock Model Configuration
+BEDROCK_MODEL_ID=anthropic.claude-sonnet-4-5-20250929-v1:0
+BEDROCK_INFERENCE_PROFILE_ID=us.anthropic.claude-sonnet-4-5-20250929-v1:0
+BEDROCK_API_KEY_SECRET=bedrock/AWS3988/Sandbox/api-key
 
-# Google Gemini API Key (FREE - Get at: https://makersuite.google.com/app/apikey)
-# Free tier: 15 requests/minute, 1500 requests/day
-GEMINI_API_KEY=your_gemini_api_key_here
-
-# Hugging Face API Token (FREE - Get at: https://huggingface.co/settings/tokens)
-# Free tier: Rate limited but generous for personal use
-HUGGINGFACE_API_KEY=hf_your_huggingface_token_here
-
-# === PAID AI PROVIDERS (Credit card required) ===
-
-# Anthropic API Key (PAID - Get at: https://console.anthropic.com/)
-# Cost: ~$3-15 per million tokens (~$0.01-0.05 per code fix)
+# === DIRECT API PROVIDERS ===
+# Anthropic API Key (for direct Claude access)
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# OpenAI API Key (PAID - Get at: https://platform.openai.com/api-keys)
-# Cost: ~$0.50-1.50 per million tokens (~$0.001-0.01 per code fix)
+# OpenAI API Key (for GPT models)
 OPENAI_API_KEY=your_openai_api_key_here
 
