--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@anthropic-ai/sdk": "^0.20.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.709.0",
+    "@aws-sdk/client-secrets-manager": "^3.709.0",
     "openai": "^4.28.0",
     "simple-git": "^3.22.0",
     "parse-diff": "^0.11.1"
