--- a/env.example
+++ b/env.example
@@ -6,14 +6,23 @@ AI_PROVIDER=bedrock
 
 # === AWS BEDROCK (Recommended for Adobe/Enterprise users) ===
 # AWS Bedrock with Claude Sonnet 4
+# You can use EITHER Method A (simpler) OR Method B:
+
+# METHOD A (RECOMMENDED - Simpler!): Use API key from AWS Secrets Manager
+# Get the key from: AWS Secrets Manager → bedrock/AWS3988/Sandbox/api-key
+# This is what your deployment email describes!
+BEDROCK_API_KEY=your_bedrock_api_key_from_secrets_manager
+
+# METHOD B (Alternative): Use IAM credentials
+# If you don't use BEDROCK_API_KEY, provide these instead:
 AWS_REGION=us-west-2
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
 
-# Bedrock Model Configuration
+# Bedrock Model Configuration (from your deployment email)
 BEDROCK_MODEL_ID=anthropic.claude-sonnet-4-5-20250929-v1:0
 BEDROCK_INFERENCE_PROFILE_ID=us.anthropic.claude-sonnet-4-5-20250929-v1:0
-BEDROCK_API_KEY_SECRET=bedrock/AWS3988/Sandbox/api-key
+BEDROCK_ENDPOINT_URL=https://bedrock-runtime.us-west-2.amazonaws.com/
 
 # === DIRECT API PROVIDERS ===
 # Anthropic API Key (for direct Claude access)
